--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <header class="header" id="header">
         <div class="logo">MYNAV</div>
         <div class="git">
-            <a href="#">
+            <a href="javascript:">
                 <svg class="icon2" aria-hidden="true">
-                    <use xlink:href="#icon-github"></use>
+                    <use xlink:href="#icon-gitee"></use>
                 </svg>
-                <span>Github</span>
+                <span>Gitee</span>
             </a>
         </div>
     </header>
