--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="warpper" id="keyboard"></div>
     </main>
     <footer class="footer">
-        <span> © 2020 mynav</span>
+        <span> Copyright © 2020 fengmoo </span>
     </footer>
     <script>
         //1.初始化数据
